# lxpanel-pi

./: configure.ac  meson.build
.pc/: applied-patches
.pc/globalapp.patch/data/ui/: panel-pref.glade
.pc/ispi.patch/src/: plugin.c  plugin.h
.pc/nobatt.patch/: configure.ac
.pc/nobatt.patch/plugins/: Makefile.am
.pc/nocpu.patch/plugins/cpu/: cpu.c
data/: Makefile.am  default  meson.build
data/ui/: launchtaskbar.ui  panel-pref.ui
debian/: changelog  control  copyright  lxpanel-pi-dev.install  lxpanel-pi.install
debian/patches/: addreconf.patch  dep_icons.patch  globalapp.patch  hybrid.patch  ispi.patch  italian.patch  leaks.patch  menuicon.patch  menupos.patch  modal.patch  modalmsg.patch  nobatt.patch  nocpu.patch  nogendlg.patch  notifdelay.patch  notify.patch  notpos.patch  pibuster.patch  raise.patch  systray.patch  translate.patch  traynotifybugs.patch  warnings.patch  wizard.patch  xkb.patch
plugins/: Makefile.am  launch-button.c  launch-button.h  launchtaskbar.c  menu.c  meson.build  separator.c  task-button.c  task-button.h  tray.c
plugins/netstat/: netstat.c
po/: POTFILES.in  af.po  ar.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  kk.po  km.po  ko.po  lg.po  lt.po  lv.po  ml.po  ms.po  nb.po  nl.po  (+25 more)
src/: conf.c  configurator.c  ev.c  gtk-run.c  icon-grid.c  input-button.c  lxpanelctl.c  main.c  meson.build  misc.c  misc.h  notify.c  panel-plugin-move.c  panel.c  panel.h  plugin.c  plugin.h  private.h  space.c
